--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -21,11 +21,17 @@ h1
   font-weight: 700
   line-height: 1.3
 
+  @media (max-width: 767px)
+    font-size: 30px
+
 h2
   font-size: 60px
   color: #A49777
   font-weight: 700
   line-height: 1.3
+
+  @media (max-width: 767px)
+    font-size: 30px
 
 h3
   font-size: 44px
