--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1293,6 +1293,183 @@ p {
   font-weight: 500;
   line-height: 1.1;
 }
+.product-preview {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+.product-preview__head {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.product-preview__nav-slider .swiper-button-next {
+  margin-left: 15px;
+}
+.product-preview__container {
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+.product-thumb {
+  width: 100%;
+  min-height: 470px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.product-thumb:hover .product-thumb__body {
+  background-color: #fff;
+  border-color: transparent;
+  -webkit-box-shadow: 6px 15px 59px rgba(0,0,0,0.1);
+          box-shadow: 6px 15px 59px rgba(0,0,0,0.1);
+}
+.product-thumb:hover .product-thumb__link-more {
+  color: #fff;
+  background-color: #a49777;
+}
+.product-thumb--new .product-thumb__tag {
+  background-image: url("data:image/svg+xml,%3Csvg width='52' height='60' viewBox='0 0 52 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg filter='url(%23filter0_d_16_163)'%3E%3Cpath d='M2 49.394V2C2 0.895431 2.89543 0 4 0H44C45.1046 0 46 0.89543 46 2V49.394C46 50.8486 44.4966 51.8166 43.1724 51.2147L24.8276 42.8762C24.3018 42.6372 23.6982 42.6372 23.1724 42.8762L4.82761 51.2147C3.50341 51.8166 2 50.8486 2 49.394Z' fill='%232DB62A'/%3E%3C/g%3E%3Cdefs%3E%3Cfilter id='filter0_d_16_163' x='0' y='0' width='52' height='59.3962' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dx='2' dy='4'/%3E%3CfeGaussianBlur stdDeviation='2'/%3E%3CfeComposite in2='hardAlpha' operator='out'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.09 0'/%3E%3CfeBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_16_163'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='effect1_dropShadow_16_163' result='shape'/%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E%0A");
+}
+.product-thumb--hit .product-thumb__tag {
+  background-image: url("data:image/svg+xml,%3Csvg width='52' height='60' viewBox='0 0 52 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg filter='url(%23filter0_d_87_51)'%3E%3Cpath d='M2 49.394V2C2 0.895431 2.89543 0 4 0H44C45.1046 0 46 0.89543 46 2V49.394C46 50.8486 44.4966 51.8166 43.1724 51.2147L24.8276 42.8762C24.3018 42.6372 23.6982 42.6372 23.1724 42.8762L4.82761 51.2147C3.50341 51.8166 2 50.8486 2 49.394Z' fill='%23F24A4A'/%3E%3C/g%3E%3Cdefs%3E%3Cfilter id='filter0_d_87_51' x='0' y='0' width='52' height='59.3962' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dx='2' dy='4'/%3E%3CfeGaussianBlur stdDeviation='2'/%3E%3CfeComposite in2='hardAlpha' operator='out'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.09 0'/%3E%3CfeBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_87_51'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='effect1_dropShadow_87_51' result='shape'/%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E%0A");
+}
+.product-thumb__body {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border: 1px solid #d8d8d8;
+  border-radius: 19px;
+  -webkit-transition: background-color 0.3s, border-color 0.3s, ease 0.3s, -webkit-box-shadow 0.3s;
+  transition: background-color 0.3s, border-color 0.3s, ease 0.3s, -webkit-box-shadow 0.3s;
+  transition: background-color 0.3s, border-color 0.3s, box-shadow 0.3s, ease 0.3s;
+  transition: background-color 0.3s, border-color 0.3s, box-shadow 0.3s, ease 0.3s, -webkit-box-shadow 0.3s;
+}
+.product-thumb__top {
+  position: relative;
+  padding-top: 50px;
+}
+.product-thumb__img {
+  width: 220px;
+  height: 220px;
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+/* img
+    vertical-align: top
+    position: absolute
+    top: 50%
+    left: 50%
+    transform: translate(-50%, -50%)
+    z-index: 1 */
+}
+.product-thumb__tag {
+  font-size: 14px;
+  color: #fff;
+  font-weight: 600;
+  line-height: 1;
+  text-align: center;
+  width: 52px;
+  height: 60px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0 0;
+  position: absolute;
+  top: -10px;
+  right: 40px;
+  padding-top: 15px;
+  padding-right: 5px;
+  padding-bottom: 10px;
+  z-index: 2;
+}
+.product-thumb__bottom {
+  padding: 0 50px 35px 50px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+}
+.product-thumb__name {
+  font-size: 29px;
+  color: #3d3d3d;
+  font-weight: 700;
+  line-height: 1.1;
+  text-align: center;
+  margin-bottom: 30px;
+}
+.product-thumb__info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: end;
+      -ms-flex-align: end;
+          align-items: flex-end;
+  width: 100%;
+}
+.product-thumb__size {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.product-thumb__size span {
+  font-size: 15px;
+  color: #c4c4c4;
+  font-weight: 500;
+  line-height: 1;
+  margin-bottom: 5px;
+}
+.product-thumb__size strong {
+  font-size: 21px;
+  color: #545454;
+  font-weight: 700;
+  line-height: 1;
+}
+.product-thumb__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: right;
+}
+.product-thumb__price span {
+  font-size: 21px;
+  color: #c4c4c4;
+  font-weight: 500;
+  line-height: 1;
+  text-decoration: line-through;
+  margin-bottom: 5px;
+}
+.product-thumb__price strong {
+  font-size: 32px;
+  color: #a49777;
+  font-weight: 700;
+  line-height: 1;
+}
+.product-thumb__link-more {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  max-width: 220px;
+}
 .steps-work {
   padding-top: 60px;
   padding-bottom: 60px;
@@ -1681,6 +1858,12 @@ p {
   .header-contacts__phone {
     display: none;
   }
+  h1 {
+    font-size: 30px;
+  }
+  h2 {
+    font-size: 30px;
+  }
   .contacts-form__inner {
     padding-top: 40px;
     padding-bottom: 220px;
@@ -1764,6 +1947,15 @@ p {
   .our-works__name {
     font-size: 17px;
   }
+  .product-thumb__bottom {
+    padding-right: 20px;
+    padding-left: 20px;
+    padding-bottom: 0;
+  }
+  .product-thumb__link-more {
+    -webkit-transform: translateY(1px);
+            transform: translateY(1px);
+  }
   .steps-work__title {
     font-size: 30px;
   }
@@ -1840,6 +2032,23 @@ p {
   .hero__title {
     font-size: 31px;
     margin-bottom: 30px;
+  }
+  .product-preview__nav-slider {
+    display: none;
+  }
+  .product-preview__items {
+    display: block;
+  }
+  .product-preview__item {
+    margin-bottom: 40px;
+  }
+  .product-thumb {
+    min-height: 365px;
+  }
+  .product-thumb__img {
+    width: 195px;
+    height: 120px;
+    margin-bottom: 15px;
   }
 }
 @media (max-width: 479px) {
