--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -232,3 +232,24 @@ p
 
   &.swiper-pagination-bullet-active
     background-color: #A49777
+
+.content-block
+  padding: 60px 15px
+  max-width: 770px
+  width: 100%
+  margin-left: auto
+  margin-right: auto
+
+  @media (max-width: 1279px)
+    padding-top: 30px
+
+  p
+    font-size: 19px
+    font-weight: 700
+    line-height: 1.7
+    color: #6A6559
+    margin-bottom: 0
+
+    @media (max-width: 767 px)
+      font-size: 15px
+      line-height: 1.5
