--- a/marmelad/_blocks/_layouts/app.styl
+++ b/marmelad/_blocks/_layouts/app.styl
@@ -41,6 +41,9 @@ h3
   line-height: 1.3
   margin-bottom: 15px
 
+  @media (max-width: 767px)
+    font-size: 30px
+
 h5
   font-size: 18px
   color: #434343
