--- a/marmelad/_blocks/other-projects/other-projects.styl
+++ b/marmelad/_blocks/other-projects/other-projects.styl
@@ -1,9 +1,15 @@
-.see-also-product
+.other-projects
   padding-top: 35px
   padding-bottom: 60px
 
   @media (max-width: 1279px)
     padding-bottom: 30px
+
+  &__head
+    margin-bottom: 60px
+
+    @media (max-width: 767px)
+      margin-bottom: 35px
 
   &__items
     display: flex
