--- a/static/css/app.css
+++ b/static/css/app.css
@@ -882,6 +882,276 @@ p {
 .inner-page-head h1 {
   margin-bottom: 45px;
 }
+.card-project--new .card-project__tag {
+  background-image: url("data:image/svg+xml,%3Csvg width='52' height='60' viewBox='0 0 52 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg filter='url(%23filter0_d_16_163)'%3E%3Cpath d='M2 49.394V2C2 0.895431 2.89543 0 4 0H44C45.1046 0 46 0.89543 46 2V49.394C46 50.8486 44.4966 51.8166 43.1724 51.2147L24.8276 42.8762C24.3018 42.6372 23.6982 42.6372 23.1724 42.8762L4.82761 51.2147C3.50341 51.8166 2 50.8486 2 49.394Z' fill='%232DB62A'/%3E%3C/g%3E%3Cdefs%3E%3Cfilter id='filter0_d_16_163' x='0' y='0' width='52' height='59.3962' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dx='2' dy='4'/%3E%3CfeGaussianBlur stdDeviation='2'/%3E%3CfeComposite in2='hardAlpha' operator='out'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.09 0'/%3E%3CfeBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_16_163'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='effect1_dropShadow_16_163' result='shape'/%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E%0A");
+}
+.card-project--hit .card-project__tag {
+  background-image: url("data:image/svg+xml,%3Csvg width='52' height='60' viewBox='0 0 52 60' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cg filter='url(%23filter0_d_87_51)'%3E%3Cpath d='M2 49.394V2C2 0.895431 2.89543 0 4 0H44C45.1046 0 46 0.89543 46 2V49.394C46 50.8486 44.4966 51.8166 43.1724 51.2147L24.8276 42.8762C24.3018 42.6372 23.6982 42.6372 23.1724 42.8762L4.82761 51.2147C3.50341 51.8166 2 50.8486 2 49.394Z' fill='%23F24A4A'/%3E%3C/g%3E%3Cdefs%3E%3Cfilter id='filter0_d_87_51' x='0' y='0' width='52' height='59.3962' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB'%3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeColorMatrix in='SourceAlpha' type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0' result='hardAlpha'/%3E%3CfeOffset dx='2' dy='4'/%3E%3CfeGaussianBlur stdDeviation='2'/%3E%3CfeComposite in2='hardAlpha' operator='out'/%3E%3CfeColorMatrix type='matrix' values='0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.09 0'/%3E%3CfeBlend mode='normal' in2='BackgroundImageFix' result='effect1_dropShadow_87_51'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='effect1_dropShadow_87_51' result='shape'/%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E%0A");
+}
+.card-project__head-inner {
+  max-width: 1105px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+}
+.card-project__head-inner h1 {
+  max-width: 610px;
+  width: 100%;
+  line-height: 1.1;
+}
+.card-project__links {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding-top: 25px;
+  margin-left: auto;
+}
+.card-project__links a {
+  font-size: 17px;
+  color: #adadad;
+  font-weight: 600;
+  line-height: 1;
+  text-decoration: none;
+  -webkit-transition: color 0.3s, ease 0.3s;
+  transition: color 0.3s, ease 0.3s;
+}
+.card-project__links a:hover {
+  color: #de8c10;
+}
+.card-project__links span {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 2px;
+          flex: 0 0 2px;
+  width: 2px;
+  max-width: 2px;
+  height: 15px;
+  background-color: #a49777;
+  margin-right: 15px;
+  margin-left: 15px;
+}
+.card-project__body {
+  max-width: 1320px;
+  width: 100%;
+  padding: 50px 50px 70px 50px;
+  -webkit-box-shadow: 6px 15px 59px rgba(0,0,0,0.08);
+          box-shadow: 6px 15px 59px rgba(0,0,0,0.08);
+  border-radius: 55px;
+  background-color: #fff;
+  margin-top: 10px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+}
+.card-project__wrapper {
+  max-width: 1000px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+}
+.card-project__preview {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 470px;
+          flex: 0 0 470px;
+  width: 470px;
+  max-width: 470px;
+}
+.card-project__container {
+  margin-bottom: 40px;
+}
+.card-project__item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  height: auto;
+}
+.card-project__img {
+  margin: auto;
+}
+.card-project__img img {
+  vertical-align: top;
+}
+.card-project__info {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 430px;
+          flex: 0 0 430px;
+  width: 430px;
+  max-width: 430px;
+  margin-left: auto;
+}
+.card-project__tag {
+  font-size: 14px;
+  color: #fff;
+  font-weight: 600;
+  line-height: 1;
+  text-align: center;
+  width: 52px;
+  height: 60px;
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: 0 0;
+  position: absolute;
+  top: -15px;
+  right: 145px;
+  padding-top: 15px;
+  padding-right: 5px;
+  padding-bottom: 10px;
+  z-index: 2;
+}
+.card-project__name {
+  color: #a49777;
+  font-weight: 700;
+  font-size: 17px;
+  line-height: 1;
+  margin-bottom: 40px;
+}
+.card-project__name h3 {
+  font-size: 30px;
+  color: #a49777;
+}
+.card-project__cost {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 50px;
+}
+.card-project__price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  text-align: right;
+  margin-left: auto;
+}
+.card-project__price span {
+  font-size: 21px;
+  color: #c4c4c4;
+  font-weight: 500;
+  line-height: 1;
+  text-decoration: line-through;
+  margin-bottom: 5px;
+}
+.card-project__price strong {
+  font-size: 32px;
+  color: #a49777;
+  font-weight: 700;
+  line-height: 1;
+}
+.card-project__characteristics {
+  margin-bottom: 40px;
+}
+.card-project__characteristics-name {
+  font-size: 17px;
+  color: #3d3d3d;
+  line-height: 1;
+  font-weight: 700;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 25px;
+}
+.card-project__characteristics-name:after {
+  content: '';
+  -webkit-box-flex: 1;
+      -ms-flex: 1 1 auto;
+          flex: 1 1 auto;
+  height: 1px;
+  background-color: #a49777;
+  margin-left: 30px;
+}
+.card-project__parameters {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.card-project__parameter {
+  width: 25%;
+}
+.card-project__parameter-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.card-project__parameter-body span {
+  font-size: 15px;
+  color: #c4c4c4;
+  font-weight: 500;
+  line-height: 1;
+  margin-bottom: 10px;
+}
+.card-project__parameter-body strong {
+  font-size: 25px;
+  color: #545454;
+  font-weight: 700;
+  line-height: 1;
+}
+.card-project__info-cards {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+.card-project__info-card {
+  width: 50%;
+  background-color: #fff;
+  -webkit-box-shadow: 0px 4px 17px rgba(0,0,0,0.11);
+          box-shadow: 0px 4px 17px rgba(0,0,0,0.11);
+  border-radius: 17px;
+  padding: 20px;
+  height: 100px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+  margin-right: 5px;
+}
+.card-project__info-card:last-child {
+  margin-right: 0;
+}
+.card-project__info-card-name {
+  font-size: 16px;
+  color: #545454;
+  font-weight: 800;
+  line-height: 1.1;
+  margin-top: auto;
+}
+.card-project__info-card-icon {
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
 .catalog-block {
   padding-top: 35px;
   padding-bottom: 60px;
@@ -1414,6 +1684,26 @@ p {
 .main-menu__nav ul li a:hover {
   color: #de8c10;
 }
+.other-projects {
+  padding-top: 35px;
+  padding-bottom: 60px;
+}
+.other-projects__head {
+  margin-bottom: 60px;
+}
+.other-projects__items {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-left: -35px;
+}
+.other-projects__item {
+  width: 33.333%;
+  padding-left: 35px;
+  margin-bottom: 20px;
+}
 .our-advantages {
   padding-top: 50px;
   padding-bottom: 50px;
@@ -1806,23 +2096,6 @@ p {
           flex: none;
   line-height: 1;
 }
-.see-also-product {
-  padding-top: 35px;
-  padding-bottom: 60px;
-}
-.see-also-product__items {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  margin-left: -35px;
-}
-.see-also-product__item {
-  width: 33.333%;
-  padding-left: 35px;
-  margin-bottom: 20px;
-}
 .sorting-projects {
   padding-top: 30px;
   padding-bottom: 30px;
@@ -2121,6 +2394,10 @@ p {
   .content-block {
     padding-top: 30px;
   }
+  .card-project__body {
+    padding-right: 20px;
+    padding-left: 20px;
+  }
   .catalog-block {
     padding-bottom: 30px;
   }
@@ -2164,6 +2441,15 @@ p {
   .logo__link {
     margin-right: 25px;
   }
+  .other-projects {
+    padding-bottom: 30px;
+  }
+  .other-projects__items {
+    margin-left: -20px;
+  }
+  .other-projects__item {
+    padding-left: 20px;
+  }
   .our-works {
     padding-top: 30px;
     padding-bottom: 60px;
@@ -2178,15 +2464,6 @@ p {
   }
   .our-works__container:after {
     display: none;
-  }
-  .see-also-product {
-    padding-bottom: 30px;
-  }
-  .see-also-product__items {
-    margin-left: -20px;
-  }
-  .see-also-product__item {
-    padding-left: 20px;
   }
   .sorting-projects__container {
     -webkit-box-pack: start;
@@ -2214,11 +2491,14 @@ p {
   .catalog-projects__item {
     width: 50%;
   }
-  .see-also-product__item {
+  .other-projects__item {
     width: 50%;
   }
 }
 @media (max-width: 1023px) {
+  .card-project__links {
+    display: none;
+  }
   .logo__desc {
     display: none;
   }
@@ -2248,6 +2528,21 @@ p {
   }
   .header-contacts__call {
     display: none;
+  }
+  .card-project__wrapper {
+    display: block;
+  }
+  .card-project__preview {
+    width: 100%;
+    max-width: 450px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 30px;
+  }
+  .card-project__info {
+    width: 100%;
+    max-width: 450px;
+    margin-right: auto;
   }
   .catalog-block__item {
     width: 50%;
@@ -2399,12 +2694,49 @@ p {
   h2 {
     font-size: 30px;
   }
+  h3 {
+    font-size: 30px;
+  }
   .content-block p {
     font-size: 15px;
     line-height: 1.5;
   }
   .inner-page-head h1 {
     margin-bottom: 20px;
+  }
+  .card-project__body {
+    padding-top: 130px;
+    padding-bottom: 50px;
+  }
+  .card-project__container {
+    margin-bottom: 25px;
+  }
+  .card-project__tag {
+    top: 45px;
+    left: 45px;
+    right: auto;
+  }
+  .card-project__name {
+    margin-bottom: 20px;
+  }
+  .card-project__cost {
+    margin-bottom: 30px;
+  }
+  .card-project__price {
+    position: absolute;
+    top: 45px;
+    right: 20px;
+  }
+  .card-project__parameters {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+  .card-project__parameter {
+    width: 50%;
+    margin-bottom: 25px;
+  }
+  .card-project__parameter-body span {
+    margin-bottom: 0;
   }
   .contacts-form__inner {
     padding-top: 40px;
@@ -2486,6 +2818,9 @@ p {
             flex: 0 0 70px;
     width: 70px;
     max-width: 70px;
+  }
+  .other-projects__head {
+    margin-bottom: 35px;
   }
   .our-advantages__head {
     margin-bottom: 15px;
@@ -2608,6 +2943,9 @@ p {
     font-size: 31px;
     margin-bottom: 30px;
   }
+  .other-projects__item {
+    width: 100%;
+  }
   .product-preview__nav-slider {
     display: none;
   }
@@ -2642,9 +2980,6 @@ p {
     height: 120px;
     margin-bottom: 15px;
   }
-  .see-also-product__item {
-    width: 100%;
-  }
   .sorting-projects__container {
     display: block;
   }
@@ -2656,6 +2991,27 @@ p {
   }
 }
 @media (max-width: 479px) {
+  .card-project__info {
+    max-width: 230px;
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .card-project__info-cards {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+  .card-project__info-card {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 10px;
+    padding: 15px;
+  }
   .contacts-form__privacy-policy .checkbox-name:before {
     margin-right: 10px;
   }
